# simle_lisp

./: .gitignore  Cargo.toml  README.md  example  example.slp  ideas.md  performance_log.md  python_example.py  python_example2.py  test.slp  utils.slp
src/: ast.rs  lexer.rs  main.rs  parser.rs
src/interpreter/: ast.rs  builtins.rs  data.rs  mod.rs  perfect_hasher.rs
src/interpreter/builtins/: arithmetic.rs  core.rs  io.rs  misc.rs  mod.rs  string.rs
src/interpreter/new_data/: mod.rs  perfect_hasher.rs
src/interpreter2/: ast.rs  data.rs  mod.rs
src/repl/: colors.rs  highlights.scm  mod.rs
